# autofunc

./: LICENSE  README.md  pyproject.toml  test.py
autofunc/: __init__.py  lib.py
